# finalproject

./: .coverage  pyproject.toml  result.txt
src/finalproject/: fasta_reader.py  main.py  needleman_wunsch.py  needleman–wunsch.py  seq_to_align.fasta  sequence.py
tests/: test_fasta_reader.py  test_needleman_wunsch.py
