[project]
name = "finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maxence Le Cheualier", email = "maxence.le_cheualier@etu.minesparis.psl.eu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
finalproject = "finalproject.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
